--- a/contribution/lang/it.json
+++ b/contribution/lang/it.json
@@ -2650,7 +2650,7 @@
  	},
  	"inventory": {
  	 	"scrap": {
- 	 	 	"trans": "rottame",
+ 	 	 	"trans": "rottama",
  	 	 	"eng": "scrap"
  	 	},
  	 	"ui": {
