--- a/contribution/lang/ko.json
+++ b/contribution/lang/ko.json
@@ -3679,7 +3679,7 @@
  	"trade": {
  	 	"moneySelectModal": {
  	 	 	"title": {
- 	 	 	 	"trans": "거래에 얼마나 많은 비트 코인을 구속하고 싶습니까?",
+ 	 	 	 	"trans": "거래에 얼마나 많은 비트 코인을 등록하고 싶습니까?",
  	 	 	 	"eng": "How much Bitcoin would you like to bind to the trade?"
  	 	 	}
  	 	},
@@ -3707,31 +3707,31 @@
  	 	},
  	 	"lockButton": {
  	 	 	"title": {
- 	 	 	 	"trans": "잠그다",
+ 	 	 	 	"trans": "잠금",
  	 	 	 	"eng": "Lock"
  	 	 	}
  	 	},
  	 	"unlockButton": {
  	 	 	"title": {
- 	 	 	 	"trans": "터놓다",
+ 	 	 	 	"trans": "잠금해제",
  	 	 	 	"eng": "Unlock"
  	 	 	}
  	 	},
  	 	"error": {
  	 	 	"tradeNoLongerExist": {
- 	 	 	 	"trans": "이 무역 세션은 더 이상 존재하지 않았습니다",
+ 	 	 	 	"trans": "이 거래 세션은 더 이상 존재하지 않았습니다",
  	 	 	 	"eng": "this trade session no longer existed"
  	 	 	},
  	 	 	"cantStartTradeNotIdle": {
- 	 	 	 	"trans": "당신은 당신이 유휴 상태가되지 않을 때 거래를 시작할 수 없습니다",
+ 	 	 	 	"trans": "유후상태가 아니면 거래를 할 수 없습니다",
  	 	 	 	"eng": "You can not start a trade when you are not idle"
  	 	 	},
  	 	 	"targetPlayerBlockedYou": {
- 	 	 	 	"trans": "이 플레이어에게 무역 초대를 보낼 수 없습니다",
+ 	 	 	 	"trans": "이 플레이어에게 거래 초대를 보낼 수 없습니다",
  	 	 	 	"eng": "You cannot send trade invite to this player"
  	 	 	},
  	 	 	"targetPlayerBlockedGifts": {
- 	 	 	 	"trans": "대상 플레이어는 선물과 거래를 비활성화했습니다",
+ 	 	 	 	"trans": "상대 플레이어는 선물과 거래를 비활성화했습니다",
  	 	 	 	"eng": "Target player has disabled gift and trade"
  	 	 	},
  	 	 	"targetPlayerLimited": {
@@ -3742,7 +3742,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"minutes"
  	 	 	 	],
- 	 	 	 	"trans": "당신은 너무 자주 초대 할 수없고, 거래 초대장은 ${minutes} 분입니다",
+ 	 	 	 	"trans": "너무 자주 거래 요청을 할 수 없습니다 , 거래 초대장 대기 시간은  ${minutes} 분 남았습니다 ",
  	 	 	 	"eng": "You cannot invite too frequently, trade invite cooldown is ${minutes} minutes"
  	 	 	},
  	 	 	"maxItemsPerPlayer": {
