--- a/contribution/lang/it.json
+++ b/contribution/lang/it.json
@@ -3657,7 +3657,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"itemName"
  	 	 	 	],
- 	 	 	 	"trans": "Raddoppia gli oggetti e i punti esperienza mentre la durata e il costo aumenteranno di x4",
+ 	 	 	 	"trans": "Raddoppia gli oggetti e i punti esperienza mentre la durata e il costo aumenteranno di 4 volte",
  	 	 	 	"eng": "Double the items and exp! while the duration and cost will increase by 4 times"
  	 	 	},
  	 	 	"activate": {
@@ -3679,7 +3679,7 @@
  	"trade": {
  	 	"moneySelectModal": {
  	 	 	"title": {
- 	 	 	 	"trans": "Quanto bitcoin vorresti legarsi al commercio?",
+ 	 	 	 	"trans": "Quanti Bitcoin vorresti associare alla transazione?",
  	 	 	 	"eng": "How much Bitcoin would you like to bind to the trade?"
  	 	 	}
  	 	},
@@ -3687,7 +3687,7 @@
  	 	 	"vars": [
  	 	 	 	"playerName"
  	 	 	],
- 	 	 	"trans": "Aspettando ${playerName} per accettare il commercio ...",
+ 	 	 	"trans": "In attesa che ${playerName} accetti la richiesta di commercio ...",
  	 	 	"eng": "Waiting for ${playerName} to accept the trade..."
  	 	},
  	 	"selectAmount": {
@@ -3695,7 +3695,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"itemName"
  	 	 	 	],
- 	 	 	 	"trans": "Quanti ${itemName} vorresti scambiare?",
+ 	 	 	 	"trans": "Quale quantità di ${itemName} vorresti commerciare?",
  	 	 	 	"eng": "How many ${itemName} would you like to trade?"
  	 	 	}
  	 	},
@@ -3707,36 +3707,36 @@
  	 	},
  	 	"lockButton": {
  	 	 	"title": {
- 	 	 	 	"trans": "Serratura",
+ 	 	 	 	"trans": "Conferma transazione",
  	 	 	 	"eng": "Lock"
  	 	 	}
  	 	},
  	 	"unlockButton": {
  	 	 	"title": {
- 	 	 	 	"trans": "Sbloccare",
+ 	 	 	 	"trans": "Modifica transazione",
  	 	 	 	"eng": "Unlock"
  	 	 	}
  	 	},
  	 	"error": {
  	 	 	"tradeNoLongerExist": {
- 	 	 	 	"trans": "Questa sessione commerciale non esisteva più",
+ 	 	 	 	"trans": "Questa sessione di commercio non esiste più",
  	 	 	 	"eng": "this trade session no longer existed"
  	 	 	},
  	 	 	"cantStartTradeNotIdle": {
- 	 	 	 	"trans": "Non puoi iniziare un commercio quando non sei inattivo",
+ 	 	 	 	"trans": "Puoi avviare una sessione di commercio solo quando sei inattivo",
  	 	 	 	"eng": "You can not start a trade when you are not idle"
  	 	 	},
  	 	 	"targetPlayerBlockedYou": {
- 	 	 	 	"trans": "Non puoi inviare un invito commerciale a questo giocatore",
+ 	 	 	 	"trans": "Non puoi inviare una richiesta di commercio a questo giocatore",
  	 	 	 	"eng": "You cannot send trade invite to this player"
  	 	 	},
  	 	 	"targetPlayerBlockedGifts": {
- 	 	 	 	"trans": "Il giocatore selezionato ha disabilitato i regali e lo scambio",
+ 	 	 	 	"trans": "Il giocatore selezionato ha disabilitato i regali e le richieste di commercio",
  	 	 	 	"eng": "Target player has disabled gift and trade"
  	 	 	},
  	 	 	"targetPlayerLimited": {
 
- 	 	 	 	"trans": "Il giocatore selezionato non può partecipare allo scambio",
+ 	 	 	 	"trans": "Il giocatore selezionato non può partecipare a sessioni di commercio",
  	 	 	 	"eng": "Target player cannot participate in trade"
  	 	 	},
  	 	 	"tooFrequentlyInvite": {
@@ -3750,7 +3750,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"maxItems"
  	 	 	 	],
- 	 	 	 	"trans": "Non è possibile aggiungere più di ${maxItems} elementi per giocatore",
+ 	 	 	 	"trans": "Non è possibile aggiungere più di ${maxItems} oggetti per giocatore",
  	 	 	 	"eng": "You cannot add more than ${maxItems} items per player"
  	 	 	},
  	 	 	"notEnoughItems": {
@@ -3773,7 +3773,7 @@
  	 	 	 	 	"itemName",
  	 	 	 	 	"playerName"
  	 	 	 	],
- 	 	 	 	"trans": "${playerName} non ha abbastanza spazio nel loro inventario per ${itemName}",
+ 	 	 	 	"trans": "${playerName} non ha abbastanza spazio nel suo inventario per ${itemName}",
  	 	 	 	"eng": "${playerName} doesn't have enough space in their inventory for ${itemName} to complete the trade."
  	 	 	},
  	 	 	"youNotEnoughSpace": {
@@ -3787,7 +3787,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"itemName"
  	 	 	 	],
- 	 	 	 	"trans": "Non hai abbastanza ${itemName} per completare il commercio.",
+ 	 	 	 	"trans": "Non hai abbastanza quantità di ${itemName} per completare la transazione.",
  	 	 	 	"eng": "You don't have enough ${itemName} to complete the trade."
  	 	 	},
  	 	 	"otherPlayerNotEnoughItem": {
@@ -3795,18 +3795,18 @@
  	 	 	 	 	"itemName",
  	 	 	 	 	"playerName"
  	 	 	 	],
- 	 	 	 	"trans": "${playerName} non ha abbastanza ${itemName} per completare il commercio.",
+ 	 	 	 	"trans": "${playerName} non ha abbastanza quantità di ${itemName} per completare la transazione.",
  	 	 	 	"eng": "${playerName} doesn't have enough ${itemName} to complete the trade."
  	 	 	},
  	 	 	"youNotEnoughMoney": {
- 	 	 	 	"trans": "Non hai abbastanza soldi per completare il commercio.",
+ 	 	 	 	"trans": "Non hai abbastanza soldi per completare la transazione.",
  	 	 	 	"eng": "You don't have enough money to complete the trade."
  	 	 	},
  	 	 	"otherPlayerNotEnoughMoney": {
  	 	 	 	"vars": [
  	 	 	 	 	"playerName"
  	 	 	 	],
- 	 	 	 	"trans": "${playerName} non ha abbastanza soldi per completare il commercio.",
+ 	 	 	 	"trans": "${playerName} non ha abbastanza soldi per completare la transazione.",
  	 	 	 	"eng": "${playerName} doesn't have enough money to complete the trade."
  	 	 	}
  	 	},
@@ -3833,7 +3833,7 @@
  	 	 	 	"money",
  	 	 	 	"playerName"
  	 	 	],
- 	 	 	"trans": "Hai ricevuto ${money} btc da ${playerName}",
+ 	 	 	"trans": "Hai ricevuto ${money} BTC da ${playerName}",
  	 	 	"eng": "You received ${money} BTC from ${playerName}"
  	 	},
  	 	"moneySent": {
@@ -3841,7 +3841,7 @@
  	 	 	 	"money",
  	 	 	 	"playerName"
  	 	 	],
- 	 	 	"trans": "Hai inviato ${money} btc a ${playerName}",
+ 	 	 	"trans": "Hai inviato ${money} BTC a ${playerName}",
  	 	 	"eng": "You sent ${money} BTC to ${playerName}"
  	 	}
  	},
