--- a/contribution/lang/pt.json
+++ b/contribution/lang/pt.json
@@ -5872,7 +5872,7 @@
  	 	 	 	 	"Sabia que os T.A.S. atuais estão na versão 2.0?",
  	 	 	 	 	"Lembre-se: T.A.S. Raros e Normais não são compatíveis entre si.",
  	 	 	 	 	"BTC? Não, nós só negociamos em UNITs aqui.",
- 	 	 	 	 	"Você conhece a Rossi, do banco? Estudamos juntas na escola.",
+ 	 	 	 	 	"Você conhece a Lexi, do banco? Estudamos juntas na escola.",
  	 	 	 	 	"Já visitou o Doc no Mercado Trinoky? Você não parece estar muito bem.",
  	 	 	 	 	"A maioria das pessoas por aqui são legais. Eu estresso a maioria.",
  	 	 	 	 	"Esteve em algum lugar interessante recentemente? Eu acabei de voltar de Neo-Japão.",
@@ -6146,7 +6146,7 @@
  	 	 	 	 	"Bem vindo! Qual serviço você vai usar hoje?",
  	 	 	 	 	"24/7 para todas as suas necessidades bancárias.",
  	 	 	 	 	"Esse é o lugar mais seguro da cidade.",
- 	 	 	 	 	"Olá! Meu nome é Rossi. O que posso fazer por você?",
+ 	 	 	 	 	"Olá! Meu nome é Lexi. O que posso fazer por você?",
  	 	 	 	 	"Caixas à esquerda. Depósitos à direita.",
  	 	 	 	 	"Obrigada pela visita de hoje. Precisa de alguma ajuda?",
  	 	 	 	 	"Você de novo não... O que você quer?",
