--- a/contribution/lang/zh-CN.json
+++ b/contribution/lang/zh-CN.json
@@ -5872,7 +5872,7 @@
  	 	 	 	 	"你知道目前的 S.A.T. 的实际上是 2.0 版本吗？",
  	 	 	 	 	"记住。稀有的 S.A.T. 和普通等级的 S.A.T. 不相容。",
  	 	 	 	 	"BTC？不，我们这里只交易 UNIT。",
- 	 	 	 	 	"你认识银行的 Rossi 吗？我们以前一起上学。",
+ 	 	 	 	 	"你认识银行的 Lexi 吗？我们以前一起上学。",
  	 	 	 	 	"你看起来不是很好。去看过医生了吗？",
  	 	 	 	 	"这里的大多数人都很好。我是说大多数...",
  	 	 	 	 	"最近去了什么有趣的地方吗？我刚刚从新日本回来。",
@@ -6146,7 +6146,7 @@
  	 	 	 	 	"欢迎。你今天需要什么服务？",
  	 	 	 	 	"全年无休，满足您的所有银行需求。",
  	 	 	 	 	"这里是本市最安全的地方。",
- 	 	 	 	 	"您好。我的名字是 Rossi。我能为你做什么？",
+ 	 	 	 	 	"您好。我的名字是 Lexi。我能为你做什么？",
  	 	 	 	 	"出纳员在左边。存款柜台在右边。",
  	 	 	 	 	"感谢您今天的来访。需要任何帮助吗？",
  	 	 	 	 	"又是你... 你想要什么？",
