--- a/contribution/lang/zh-TW.json
+++ b/contribution/lang/zh-TW.json
@@ -5872,7 +5872,7 @@
  	 	 	 	 	"您知道目前的 S.A.T. 的實際上是 2.0 版本嗎？",
  	 	 	 	 	"記住。稀有的 S.A.T. 和普通等級的 S.A.T. 不相容。",
  	 	 	 	 	"BTC？不，我們這裡只交易 UNIT。",
- 	 	 	 	 	"您認識銀行的 Rossi 嗎？我們以前一起上學。",
+ 	 	 	 	 	"您認識銀行的 Lexi 嗎？我們以前一起上學。",
  	 	 	 	 	"您看起來不是很好。去看過醫生了嗎？",
  	 	 	 	 	"這裡的大多數人都很好。我是說大多數...",
  	 	 	 	 	"最近去了什麼有趣的地方嗎？我剛剛從新日本回來。",
@@ -6140,7 +6140,7 @@
  	 	 	 	 	"歡迎。您今天需要什麼服務？",
  	 	 	 	 	"全年無休，滿足您的所有銀行需求。",
  	 	 	 	 	"這裡是本市最安全的地方。",
- 	 	 	 	 	"您好。我的名字是 Rossi。我能為您做什麼？",
+ 	 	 	 	 	"您好。我的名字是 Lexi。我能為您做什麼？",
  	 	 	 	 	"出納員在左邊。存款櫃台在右邊。",
  	 	 	 	 	"感謝您今天的來訪。需要任何幫助嗎？",
  	 	 	 	 	"又是您... 您想要什麼？",
