--- a/contribution/lang/sk.json
+++ b/contribution/lang/sk.json
@@ -5872,7 +5872,7 @@
  	 	 	 	 	"Did you know the current S.A.T.'s are actually version 2.0?",
  	 	 	 	 	"Remember: Rare S.A.T.'s and Normal grade S.A.T.'s arent compatible.",
  	 	 	 	 	"BTC? No, we only deal in UNITs here.",
- 	 	 	 	 	"Do you know Rossi from the bank? We went to school together.",
+ 	 	 	 	 	"Do you know Lexi from the bank? We went to school together.",
  	 	 	 	 	"Have you visited Doc at Trinoky Mart? You don't look too well.",
  	 	 	 	 	"Most folks around here are nice. I stress most.",
  	 	 	 	 	"Been anywhere interesting lately? I just got back from Neo-Japan.",
@@ -6146,7 +6146,7 @@
  	 	 	 	 	"Welcome. What service are you using today?",
  	 	 	 	 	"24/7 for all your banking needs.",
  	 	 	 	 	"This is the most secure place in the city.",
- 	 	 	 	 	"Hello there. My name is Rossi. What can I do for you?",
+ 	 	 	 	 	"Hello there. My name is Lexi. What can I do for you?",
  	 	 	 	 	"Tellers to the left. Deposit stations to the right.",
  	 	 	 	 	"Thanks for visting today. Need any favors?",
  	 	 	 	 	"Not you again... What do you want?",
